force-app/main/default/objects/OM_SAC_oweaByPlant__mdt/OM_SAC_oweaByPlant__mdt.object-meta.xml
<CustomObject>
    <label>OWEA by Plant</label>
    <pluralLabel>OWEA by Plants</pluralLabel>
</CustomObject>