force-app/main/default/objects/OM_SAC_oweaByPlant__mdt/fields/OM_SAC_email__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_email__c</fullName>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>