force-app/main/default/objects/OM_SAC_oweaByPlant__mdt/fields/OM_SAC_plant__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_plant__c</fullName>
    <label>Plant</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>