force-app/main/default/objects/OM_SAC_oweaByPlant__mdt/fields/OM_SAC_plantNumber__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_plantNumber__c</fullName>
    <label>Plant Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>