force-app/main/default/objects/OM_SAC_oweaByPlant__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>OM_SAC_email__c</columns>
    <columns>OM_SAC_plantNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
    <language>en_US</language>
</ListView>